[package]
name = "bevy-new"
version = "0.1.0"
authors = ["fantasyzhjk <fantasyzhjk@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy = "0.5.0"
rand = "0.8.4"